Added cuda gradient + tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # APR build options:
 option(APR_INSTALL "Install APR library" ON)
-option(APR_BUILD_SHARED_LIB "Builds shared library" ON)
+option(APR_BUILD_SHARED_LIB "Builds shared library" OFF)
 option(APR_BUILD_STATIC_LIB "Builds shared library" ON)
 option(APR_BUILD_EXAMPLES "Build APR examples" OFF)
 option(APR_TESTS "Build APR tests" OFF)
@@ -102,7 +102,7 @@ endif()
 set(LIBRARY_NAME apr)
 
 set(SOURCE_FILES src/io/blosc_filter.c src/io/hdf5functions_blosc.cpp)
-set(SOURCE_FILES_RAYCAST src/numerics/APRRaycaster.cpp src/vis/Camera.cpp src/vis/Object.cpp src/vis/RaytracedObject.cpp )
+set(SOURCE_FILES_RAYCAST src/numerics/APRRaycaster.cpp src/vis/Camera.cpp src/vis/Object.cpp src/vis/RaytracedObject.cpp src/algorithm/ComputeGradientCuda.hpp)
 
 add_library(aprObjLib OBJECT ${SOURCE_FILES} ${SOURCE_FILES_RAYCAST})
 
@@ -118,7 +118,7 @@ if(APR_USE_CUDA)
     set(CUDA_TARGET cudaLib)
     set(CUDA_APR_TARGET cudaAprLib)
     list(APPEND CUDA_NVCC_FLAGS "-std=c++14;-O0; -Xcompiler -fPIC") 
-    cuda_add_library(${CUDA_APR_TARGET} STATIC src/algorithm/number.cu)
+    cuda_add_library(${CUDA_APR_TARGET} STATIC src/algorithm/number.cu src/algorithm/ComputeGradientCuda.cu)
     target_link_libraries(${CUDA_APR_TARGET} ${CUDA_LIBRARIES})
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DAPR_USE_CUDA")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DAPR_USE_CUDA")
@@ -129,6 +129,9 @@ if(APR_BUILD_STATIC_LIB)
     set(STATIC_TARGET_NAME staticLib)
     add_library(${STATIC_TARGET_NAME} STATIC $<TARGET_OBJECTS:aprObjLib>)
     set_target_properties(${STATIC_TARGET_NAME} PROPERTIES OUTPUT_NAME ${LIBRARY_NAME})
+    set_target_properties(${STATIC_TARGET_NAME} PROPERTIES SUFFIX "")
+    set_target_properties(${STATIC_TARGET_NAME} PROPERTIES PREFIX "")
+        message(STATUS "APR: STATIC NAME ${STATIC_TARGET_NAME} ${LIBRARY_NAME}")
     target_include_directories(${STATIC_TARGET_NAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src> $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}>)
     target_link_libraries(${STATIC_TARGET_NAME} PRIVATE ${CUDA_CUDART_LIBRARY})
     if(APR_USE_CUDA)
@@ -146,12 +149,15 @@ if(APR_BUILD_SHARED_LIB)
     target_include_directories(${SHARED_TARGET_NAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src> $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}>)
     set_target_properties(${SHARED_TARGET_NAME} PROPERTIES OUTPUT_NAME ${LIBRARY_NAME})
     set_target_properties(${SHARED_TARGET_NAME} PROPERTIES LIBRARY_OUTPUT_NAME ${LIBRARY_NAME})
+    set_target_properties(${SHARED_TARGET_NAME} PROPERTIES SUFFIX "")
+    set_target_properties(${SHARED_TARGET_NAME} PROPERTIES PREFIX "")
     set_target_properties(${SHARED_TARGET_NAME} PROPERTIES ARCHIVE_OUTPUT_NAME ${LIBRARY_NAME})
     add_dependencies(${SHARED_TARGET_NAME} blosc_static)
     set_property(TARGET ${SHARED_TARGET_NAME} PROPERTY VERSION ${APR_VERSION_STRING})
     set_property(TARGET ${SHARED_TARGET_NAME} PROPERTY SOVERSION ${APR_VERSION_MAJOR})
     if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 	    if(APR_USE_CUDA)
+            message(STATUS "APR: Adding dependencies to ${CUDA_APR_TARGET}")
             add_dependencies(${SHARED_TARGET_NAME} ${CUDA_APR_TARGET})
 		    set(EXTRA_APR_CUDA_LIBS "-Wl,-force_load,$<TARGET_FILE:${CUDA_APR_TARGET}>")
 	    endif()
