Final version of kernel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -161,13 +161,13 @@ if(APR_BUILD_SHARED_LIB)
             add_dependencies(${SHARED_TARGET_NAME} ${CUDA_APR_TARGET})
 		    set(EXTRA_APR_CUDA_LIBS "-Wl,-force_load,$<TARGET_FILE:${CUDA_APR_TARGET}>")
 	    endif()
-	    target_link_libraries(${SHARED_TARGET_NAME} PRIVATE ${CUDA_CUDART_LIBRARY} ${HDF5_LIBRARIES} ${TIFF_LIBRARIES} -Wl,-force_load,$<TARGET_FILE:blosc_static> ${EXTRA_APR_CUDA_LIBS})
+	    target_link_libraries(${SHARED_TARGET_NAME} PUBLIC ${CUDA_CUDART_LIBRARY} ${HDF5_LIBRARIES} ${TIFF_LIBRARIES} -Wl,-force_load,$<TARGET_FILE:blosc_static> ${EXTRA_APR_CUDA_LIBS})
     else()
 	    if(APR_USE_CUDA)
             add_dependencies(${SHARED_TARGET_NAME} ${CUDA_APR_TARGET})
 		    set(EXTRA_APR_CUDA_LIBS "$<TARGET_FILE:${CUDA_APR_TARGET}>")
 	    endif()
-	    target_link_libraries(${SHARED_TARGET_NAME} PRIVATE ${CUDA_CUDART_LIBRARY} ${HDF5_LIBRARIES} ${TIFF_LIBRARIES} -Wl,--whole-archive,$<TARGET_FILE:blosc_static>,${EXTRA_APR_CUDA_LIBS},--no-whole-archive)
+	    target_link_libraries(${SHARED_TARGET_NAME} PUBLIC ${CUDA_CUDART_LIBRARY} ${HDF5_LIBRARIES} ${TIFF_LIBRARIES} -Wl,--whole-archive,$<TARGET_FILE:blosc_static>,${EXTRA_APR_CUDA_LIBS},--no-whole-archive)
     endif()
 endif()
 
