Flags updated for CUDA

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,7 +126,7 @@ set(CUDA_APR_TARGET "")
 if(APR_USE_CUDA)
     message(STATUS "APR: Building CUDA for APR")
     set(CMAKE_CUDA_STANDARD 14)
-    set(CMAKE_CUDA_FLAGS " -Xptxas -O3,-v --cudart shared -g -lineinfo -use_fast_math")
+    set(CMAKE_CUDA_FLAGS "--cudart shared -g -lineinfo -Xptxas -O3,-v -use_fast_math")
     enable_language(CUDA)
     set(APR_CUDA_SROUCE_FILES src/algorithm/ComputeGradientCuda.cu)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DAPR_USE_CUDA")
